upgraded to Thorntail 2.5.0 Refactored code Not everything tested/working!